--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <body><div style="text-align:center;">
 <form><input type="text" placeholder="Username in Scratch" id="un-box"><input type="submit" name="Go" onclick="check();return false;"></form>
 <output id="dbox"></output>
+<br>
+Licensed under GPL v3, see the license <a href="https://www.gnu.org/licenses/gpl-3.0.txt">here</a>. Using Crystal Icons under LGPLv3, <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">here</a>.
 </div>
 <script src="main.js" />
 <script>
