--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 </head>
-<body><div style="text-align:center;">
+<body><script>
+function check(){
+  var un=document.getElementById("un-box").value;
+  document.getElementById("dbox").innerHTML = isOkayUser(un)?'<img src="yes.png" alt="YES">YES':'<img src="no.png" alt="NO">NO';
+}
+</script><div style="text-align:center;">
 <form><input type="text" placeholder="Username in Scratch" id="un-box"><input type="submit" name="Go" onclick="check();return false;"></form>
 <output id="dbox"></output>
 <br>
 Licensed under GPL v3, see the license <a href="https://www.gnu.org/licenses/gpl-3.0.txt">here</a>. Using Crystal Icons under LGPLv3, <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">here</a>.
 </div>
 <script src="main.js" />
-<script>
-function check(){
-  var un=document.getElementById("un-box").value;
-  document.getElementById("dbox").innerHTML = isOkayUser(un)?'<img src="yes.png" alt="YES">YES':'<img src="no.png" alt="NO">NO';
-}
-</script>
+
 </body></html>
