--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta charset="utf-8"><title>Scratch Wiki Users</title>
+<html><head><meta charset="utf-8"><title>Scratch Wiki Users</title><script src="main.js" />
 <!--
 (C) 2017 apple502j All rights reversed.
    This program is free software: you can redistribute it and/or modify
@@ -27,6 +27,4 @@ function check(){
 <br>
 Licensed under GPL v3, see the license <a href="https://www.gnu.org/licenses/gpl-3.0.txt">here</a>. Using Crystal Icons under LGPLv3, <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">here</a>.
 </div>
-<script src="main.js" />
-
 </body></html>
