--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html><head><meta charset="utf-8"><title>Scratch Wiki Users</title><script src="main.js" />
+<script>
+function check(){
+  var un=document.getElementById("un-box").value;
+  document.getElementById("dbox").innerHTML = isOkayUser(un)?'<img src="yes.png" alt="YES">YES':'<img src="no.png" alt="NO">NO';
+}
+</script>
 <!--
 (C) 2017 apple502j All rights reversed.
    This program is free software: you can redistribute it and/or modify
@@ -16,13 +22,8 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 </head>
-<body><script>
-function check(){
-  var un=document.getElementById("un-box").value;
-  document.getElementById("dbox").innerHTML = isOkayUser(un)?'<img src="yes.png" alt="YES">YES':'<img src="no.png" alt="NO">NO';
-}
-</script><div style="text-align:center;">
-<form><input type="text" placeholder="Username in Scratch" id="un-box"><input type="submit" name="Go" onclick="check();return false;"></form>
+<body><div style="text-align:center;">
+<form><input type="text" placeholder="Username in Scratch" id="un-box"><input type="submit" name="Go" onclick='var un=document.getElementById("un-box").value;document.getElementById("dbox").innerHTML = isOkayUser(un)?&apos;<img src="yes.png" alt="YES">YES&apos;:&apos;<img src="no.png" alt="NO">NO&apos;;return false;'></form>
 <output id="dbox"></output>
 <br>
 Licensed under GPL v3, see the license <a href="https://www.gnu.org/licenses/gpl-3.0.txt">here</a>. Using Crystal Icons under LGPLv3, <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">here</a>.
